maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:5: error: not found: value randomInt3
    i=randomInt3()
      ^